# libhal

./: .gitignore  GNUmakefile  Makefile  Makefile.in  README.md  aes_keywrap.c  asn1.c  asn1_internal.h  configure  configure.ac  core.c  cryptech.h  cryptech_backup  cryptech_console  cryptech_muxd  cryptech_rpcmuxd  csprng.c  daemon.c  ecdsa.c  ecdsa_curves.h  errorstrings.c  hal.h  hal_internal.h  hal_io_eim.c  hal_io_fmc.c  hal_io_i2c.c  hal_rpc.c  hal_rpc.h  hash.c  hashsig.c  hashsig.h  key-backup.py  ks.c  ks.h  ks_attribute.c  ks_flash.c  ks_index.c  ks_mmap.c  ks_token.c  ks_volatile.c  (+40 more)
cryptech/: libhal.py
tests/: .gitignore  GNUmakefile  Makefile  Makefile.in  parallel-signatures.py  privetecckey  test-aes-key-wrap.c  test-bus.c  test-ecdsa.c  test-ecdsa.h  test-ecdsa.py  test-hash.c  test-hashsig.h  test-mkmif.c  test-pbkdf2.c  test-rpc_bighash.c  test-rpc_get_random.c  test-rpc_get_version.c  test-rpc_hash.c  test-rpc_hashsig.c  test-rpc_pkey.c  test-rpc_server.c  test-rsa.c  test-rsa.h  test-rsa.py  test-trng.c  test-xdr.c  time-keygen.py
utils/: GNUmakefile  Makefile  cores.c  eim_peek_poke.c  last_gasp_default_pin  load_novena_fpga  pkey-export.c  pkey-import.c  pkey.c
